--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,7 @@ spring:
     port: 5672
 queue:
   api-carro:
-    name: CarroQueue
+    name: MovieQueue
 eureka:
   instance:
     hostname: localhost
