--- a/application.yml
+++ b/application.yml
@@ -7,8 +7,8 @@ spring:
     host: localhost
     port: 5672
 queue:
-  api-carro:
-    name: CarroQueue
+  fila-movie:
+    name: MovieQueue
 eureka:
   instance:
     hostname: localhost
